fix: butons blue highlight on mobile

--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body{
     margin: 0;
     box-sizing: border-box;
 }
+
+input,
+textarea,
+button,
+select,
+a, svg {
+    -webkit-tap-highlight-color: transparent;
+}
